--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -77,6 +77,7 @@
       <li> <input style = 'font-size:14pt; padding: 4px; margin:7px' type = 'text' placeholder = 'First Name' name = 'firstname'> </li>
       <li> <input style = 'font-size:14pt; padding: 4px; margin:7px' type = 'text' placeholder = 'Last Name' name = 'lastname'> </li>
       <li> <input style = 'font-size:14pt; padding: 4px; margin:7px' type = 'text' placeholder = 'Venmo' name = 'venmo'> </li> 
+      <li> <textarea rows = 2 cols = 30 name = 'updateaboutme' id = 'updateaboutme' required></textarea> </li>
       <li> <input style = 'font-size:14pt; padding: 4px; margin:7px' type = 'file' placeholder = 'picture' name = 'picture'> </li> 
       <li> <input style = 'font-size:14pt; padding: 4px; margin:7px' type = 'password' placeholder = 'new password' name = 'newpassword'> </li>   
 
@@ -341,6 +342,7 @@
                   <!-- <li>Password</li> -->
 
                       <!-- <li><input type="password" style = 'font-size:14pt; padding: 4px; margin:7px' placeholder="Password" name="password" required></li> -->
+                      <li><textarea rows = 2 cols = 30 name = 'aboutme' id = 'aboutme' required></textarea> </li>
                        <li><input class="inputbox" id="password" type="password" placeholder="Password" name="password" required></li>
 
                       <li> <input type='password' style = 'font-size:14pt; padding: 4px; margin:7px' placeholder ="Confirm Password" id = 'confirm_password' name = 'confirm_password' required><span id='message'></span></li>
