--- a/views/partials/starred_item_partial.hbs
+++ b/views/partials/starred_item_partial.hbs
@@ -4,7 +4,7 @@
     </div> -->
        <div class="col-s-6 " style="background-image:url('/uploads/{{picture}}');height:205px; width:249.5px; background-size: cover; background-position: center; "></div> 
     <div class='contentinbox'>
-      <p align="left" id="productcontent" >{{itemname}}</p>{{user}}
+      <p align="left" id="productcontent" >{{itemname}} {{user}}</p>
       <p align="right" id="productcontent3">${{price}}</p>
 
 
