--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -5,6 +5,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="/scripts/login.js" type="text/javascript"></script>
+  <script src="/scripts/updateprofile.js" type="text/javascript"></script>
 </head>
 
 <!-- About Us Modal -->
@@ -85,12 +86,32 @@
     <div class = 'modal-body'>
       <form name = 'updateprofile' method = 'post' action = '/updateprofile' enctype="multipart/form-data">
       <ul>
+      <li> <button class = 'btn btn-default' id = 'open-display'>Update Display Name</button></li>
+      <li><button class = 'btn btn-default' id = 'open-venmo'>Update Venmo</button></li>
+      <li><button class = 'btn btn-default' id = 'open-aboutme'>Update About Me</button></li>
+      <li><button class = 'btn btn-default' id = 'open-picture'>Update Profile Picture</button></li>
+      <li><button class = 'btn btn-default' id = 'open-password'>Change Password</button></li>
+      
+      <div id = 'display' style = 'display:none;'>
       <li> <input style = 'font-size:14pt; padding: 4px; margin:7px' type = 'text' placeholder = 'First Name' name = 'firstname'> </li>
       <li> <input style = 'font-size:14pt; padding: 4px; margin:7px' type = 'text' placeholder = 'Last Name' name = 'lastname'> </li>
+      </div>
+
+      <div id = 'venmo' style = 'display:none;'>
       <li> <input style = 'font-size:14pt; padding: 4px; margin:7px' type = 'text' placeholder = 'Venmo' name = 'venmo'> </li> 
+      </div>
+
+      <div id = 'about-me' style = 'display:none;'>
       <li> <textarea rows = 2 cols = 30 name = 'updateaboutme' id = 'updateaboutme' required></textarea> </li>
+      </div>
+
+      <div id = 'new-picture' style = 'display:none;'>
       <li> <input style = 'font-size:14pt; padding: 4px; margin:7px' type = 'file' placeholder = 'picture' name = 'picture'> </li> 
-      <li> <input style = 'font-size:14pt; padding: 4px; margin:7px' type = 'password' placeholder = 'new password' name = 'newpassword'> </li>   
+      </div>
+
+      <div id = 'display-pass' style = 'display:none;'>
+      <li> <input style = 'font-size:14pt; padding: 4px; margin:7px' type = 'password' placeholder = 'new password' name = 'newpassword'></li>   
+      </div>
 
       <li> <button class = 'btn btn-default' type = 'submit'> Make Changes </button> </li>
       </ul>
@@ -363,7 +384,7 @@
                       <li> <input type = 'file' style = 'font-size:14pt; padding:4px; margin:7px' placeholder = 'Upload photo (optional)' name ='picture'></li>
 
 
-                      <li><input name = 'signupbutton' class="twobuttonssign" id="go" type="submit" value="+ +" style="left: 300px;"></li>
+                      <li><input name = 'signupbutton' class="twobuttonssign" id="signupbutton" type="submit" value="+ +" style="left: 300px;"></li>
                     </div>
                     </ul>
                   </form>
