update profile button

--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -81,7 +81,7 @@
     <div class = 'modal-header'>
     <button type = 'button' class = 'close' data-dismiss='modal'>&times;</button>
     
-    <h4 class = 'modal-title'>Update Profile</h4>
+    <h4 class = 'modal-title'>Update Account</h4>
     </div>
     <div class = 'modal-body'>
       <form name = 'updateprofile' method = 'post' action = '/updateprofile' enctype="multipart/form-data">
@@ -112,8 +112,8 @@
       <div id = 'display-pass' style = 'display:none;'>
       <li> <input style = 'font-size:14pt; padding: 4px; margin:7px' type = 'password' placeholder = 'new password' name = 'newpassword'></li>   
       </div>
-
-      <li> <button class = 'btn btn-default' type = 'submit'> Make Changes </button> </li>
+      <br><br>
+      <li> <button class = 'twobuttonslog' id = 'makechanges' type = 'submit'> Make Changes </button> </li>
       </ul>
       </form>
       </div>
@@ -373,7 +373,7 @@
                   <!-- <li>Password</li> -->
 
                       <!-- <li><input type="password" style = 'font-size:14pt; padding: 4px; margin:7px' placeholder="Password" name="password" required></li> -->
-                      <li><textarea rows = 2 cols = 30 name = 'aboutme' id = 'aboutme' required></textarea> </li>
+                      <!--<li><textarea rows = 2 cols = 30 name = 'aboutme' id = 'aboutme' required></textarea> </li>-->
                        <li><input class="inputbox" id="password" type="password" placeholder="Password" name="password" required></li>
 
                       <li> <input type='password' style = 'font-size:14pt; padding: 4px; margin:7px' placeholder ="Confirm Password" id = 'confirm_password' name = 'confirm_password' required><span id='message'></span></li>
@@ -381,7 +381,7 @@
 
                       <script src="/scripts/confirmpass.js"></script>
 
-                      <li> <input type = 'file' style = 'font-size:14pt; padding:4px; margin:7px' placeholder = 'Upload photo (optional)' name ='picture'></li>
+                      <!--<li> <input type = 'file' style = 'font-size:14pt; padding:4px; margin:7px' placeholder = 'Upload photo (optional)' name ='picture'></li>-->
 
 
                       <li><input name = 'signupbutton' class="twobuttonssign" id="signupbutton" type="submit" value="+ +" style="left: 300px;"></li>
