--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -9,11 +9,11 @@
 </head>
 
 <!-- About Us Modal -->
-<div class="modal fade" id="about-us" role="dialog">
+<!-- <div class="modal fade" id="about-us" role="dialog">
   <div class="modal-dialog">
-
+ -->
 <!-- Modal content-->
-    <div class="modal-content">
+<!--     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
         <h4 class="modal-title">About Us</h4>
@@ -26,7 +26,7 @@
     </div>
 
   </div>
-</div>
+</div> -->
 
 <div>
   <div class="modal fade" id="newitem" role="dialog">
@@ -163,7 +163,9 @@
         </ul>
         <ul class="nav navbar-nav navbar-right original">
 
-
+          <li class="nav-item" id='scrolltoabout'>
+            <a class="nav-link">About Us</a>
+          </li>
           <li class="nav-item">
              <a class="nav-link dropdown-toggle" type= "button"  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id='welcomedropdown'> Welcome, {{firstname}}! &nbsp; &#9662; </a>
 
@@ -183,9 +185,6 @@
                 <li role="presentation"><a class="nav-link" href="/manageitems">Manage Items</a></li>
                 <li role = 'presentation'><a data-toggle = 'modal' data-target = '#updateprofile'>Update Account</a></li>
                 <li role="presentation" class="divider"></li>
-                <li role="presentation">
-                  <a data-toggle="modal" data-target="#about-us">About Us</a>
-                </li>
                 <li role="presentation"><a class="nav-link" href="/logout">Logout</a></li>
               </ul>
 
@@ -193,7 +192,7 @@
           </li>
         </ul>
       </div>
-
+    <script src="/scripts/scroll.js" type="text/javascript"></script>
     </nav>
 
   {{else}}
