--- a/views/slashscreen.hbs
+++ b/views/slashscreen.hbs
@@ -2,19 +2,19 @@
 <html>
     <head>
         <title>beaver++</title>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-        <link href="css/bootstrap.min.css" rel="stylesheet">
-        <link href="css/style.css" rel="stylesheet" />
+        <!-- <link href="css/bootstrap.min.css" rel="stylesheet"> -->
+        <!-- <link href="css/style.css" rel="stylesheet" /> -->
         <link rel="stylesheet" href='/stylesheets/slashscreen.css'>
         <link rel="icon" type="image/png" href="/images/favicon.png" />
 
     </head>
 <body>
     {{> navbar }}
-    <script src="js/jquery-1.10.2.js"></script>
+<!--     <script src="js/jquery-1.10.2.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/main.js"></script> -->
 </body>
 
 </html>
@@ -35,11 +35,15 @@
 
 <!-- second section - About -->
 <div id="about" class="pad-section">
-    <div class="container">
+    <div class="container" id='aboutcontainer'>
         
             <h1 id = 'welcome'>
                 A site to buy, sell, trade, or just give away items - created by MIT students for MIT students!
             </h1>
+            <h3 style='margin-top:-100px;'>Made by Reva, Rebecca, and Chris for <a href='http://6.148.scripts.mit.edu'>6.148</a> 2017.</h3>
+            <form action="mailto:beaverplusteam@mit.edu" method="GET">
+                <input style='border: none; border-radius: 20px; background-color: #E1E1E1; padding: 8px; padding-right: 13px; padding-left: 13px; margin-top: 50px;' type="submit" value="Contact us!" />
+            </form>
        
     </div>
 </div>
