--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,6 +3,10 @@
   src: url(/fonts/Raleway/Raleway-Medium.ttf);
 }
 
+html {
+    height:100%;
+} 
+
 body {
   font-family: custom;
 }
@@ -304,29 +308,46 @@ body.modal-open div.modal-backdrop {
 
 }
 
+#typeofbrowse{
+  color: black;
+  margin-left: 100px;
+  font-size: 30px;
+  position: absolute;
+
+}
+/*
 .centerline{
-  background: url(/images/long-background2.png) fixed;
+
+  background: url(/images/long-background.png) no-repeat center center fixed;
 
   display: table;
-  height: 400px;
+  height: 104%;
   position: relative;
-  width: 100%;
+  width: 100%;*/
 /*-webkit-background-size: cover;
 -moz-background-size: cover;
 -o-background-size: cover;*/
-  background-size: 100% 450px;
+/*  background-size: cover;
 
-}
+}*/
 
 .content {
 
     position: absolute;
     width: 100%;
     height: 400px;
-/*    top: 50%;*/
-    margin-top: 150px;
+    /*    top: 50%;*/
+/*    margin-top: 94px;*/
 /*    left: 50%;
 */  margin-left: 0px;
+    background: url(/images/long-background.png) no-repeat fixed;
+    background-size: 100% 380px;
+    display: table;
+/*    height: 104%;*/
+    position: relative;
+
+
+
 }
 /*  background-size: 100% 400px;
 *//*-webkit-background-size: cover;
@@ -695,11 +716,13 @@ body.modal-open div.modal-backdrop {
   margin-left: 200px;
   font-size: 50px;
   position: absolute;
+  margin-top: 160px;
 
 }
 
 #grouped{
   position: absolute;
+  margin-top: 150px;
 }
 
 .twobuttonssign {
@@ -837,6 +860,10 @@ body.modal-open div.modal-backdrop {
     right: 15px;
 }
 
+.navbar{
+  margin-bottom: 0px;
+}
+
 .btn-default{
   color: black;
 
@@ -911,7 +938,7 @@ body.modal-open div.modal-backdrop {
 
 #flexbox{
 
-  margin-top: 30px;
+  margin-top: 100px;
   width: 80%;
   margin-left: 10%;
   margin-right: 10%;
@@ -967,8 +994,8 @@ body.modal-open div.modal-backdrop {
 .product{
   text-align: center;
 /*  margin: 20px;*/
-  width: 250px;
-  height: 250px;
+  width: 200px;
+  height: 200px;
   background-color: white;
 /*  border: solid .3px #47474C;*/
   margin-right: 20px;
