--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -32,6 +32,7 @@
     <div class="modal-dialog">
       <!-- Modal content-->
       <div class="modal-content">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
           <h4 class="modal-titlelist" >LIST AN ITEM</h4>
           <div id="itemform">
             <form method="post" action="/uploaditem" enctype="multipart/form-data">
@@ -403,3 +404,4 @@
   {{/if}}
 
 </div>
+
