--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -193,7 +193,7 @@
           </li>
         </ul>
       </div>
-    <script src="/scripts/scroll.js" type="text/javascript"></script>
+    <!-- <script src="/scripts/scroll.js" type="text/javascript"></script> -->
     </nav>
 
   {{else}}
@@ -237,35 +237,9 @@
       </ul>
       <!-- Trigger the modal with a button -->
       <ul class="nav navbar-nav navbar-right original">
-      {{#if onIndex}}
         <li class="nav-item">
           <a class="nav-link" id='scrolltoabout'>About Us</a>
         </li> 
-      {{else}}
-        <li class="nav-item">
-          <a data-toggle="modal" data-target="#about-us">About Us</a>
-
-          <!-- About Us Modal -->
-          <!-- <div class="modal fade" id="about-us" role="dialog">
-            <div class="modal-dialog"> -->
-        
-          <!-- Modal content-->
-              <!-- <div class="modal-content">
-                <div class="modal-header">
-                  <button type="button" class="close" data-dismiss="modal">&times;</button>
-                  <h4 class="modal-title">About Us</h4>
-                </div>
-                <div class="modal-body">
-                  
-                  A site to buy, sell, trade, or just give away items - created by MIT students for MIT students!
-
-                </div>
-              </div>
-          
-            </div>
-          </div> -->
-        </li>
-      {{/if}}
         <li class="nav-item">
           <a data-toggle="modal" data-target="#login">Login</a>
 
@@ -396,7 +370,7 @@
               </li>
 
       </ul>
-      <script src="/scripts/scroll.js" type="text/javascript"></script>
+      <!-- <script src="/scripts/scroll.js" type="text/javascript"></script> -->
     </div>
 <!--     <div class="collapse navbar-collapse navHeaderCollapse textin">
           <ul class="nav navbar-nav">
