--- a/views/chat_home.hbs
+++ b/views/chat_home.hbs
@@ -33,4 +33,6 @@
     </div>
   <script src='/scripts/selectuser.js'></script>
   </body>
+  <div id='padding' style='width: 100%; height:50px;'></div>
+  {{>about}}
 </html>
