--- a/views/deletesuccess.hbs
+++ b/views/deletesuccess.hbs
@@ -8,11 +8,12 @@
 
  <body> 
     {{> navbar}}
-    <div id='content'>
+    <div id='content' style='padding-top: 175px; height: 100%;'>
       <h1>Success!</h1>
       <p>Your item was deleted.</p>
       <button class="btn btn-default" type="button" onclick="location.href='/manageitems'">return to manager</button>&#32;
       <button class="btn btn-default" type="button" onclick="location.href='/home'">return home</button>
     </div>
   </body>
+{{>about}}
 </html>
