--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -60,7 +60,7 @@
 
             <input id="inserttag" class='addtags' type='text' placeholder='Add Tag' name='inserttag'>
 
-            <li><input class="twobuttonsaddtag" id="addtag" type="submit" value="+ +" style="left: 300px;"></li>
+            <li><input class="twobuttonsaddtag" id="addtag" type="button" value="+ +" style="left: 300px;"></li>
 
 <!--             <button id="addtag" class="btn btn-default" type='button'>add</button><br> -->
             <div id="tags"></div>
