--- a/views/please-login.hbs
+++ b/views/please-login.hbs
@@ -9,7 +9,7 @@
   <body>
     {{> navbar}}
 
-    <div id="content" style='margin-top: 200px'>
+    <div id="content" style='margin-top: 200px; height: 100%'>
       <h1 id="title">Please 
 
           <a data-toggle="modal" data-target="#login">log in</a>
@@ -54,4 +54,5 @@
        to {{inorderto}} </h1>
     </div>
   </body>
+  {{>about}}
 </html>
