--- a/views/searchresults.hbs
+++ b/views/searchresults.hbs
@@ -9,7 +9,7 @@
   <body>
     {{> navbar}}
 
-    <div id="content" style='margin-top: 150px'>
+    <div id="content" style='margin-top: 150px; height: 100%'>
       <h1 id="title">Search results for "{{term}}" </h1>
       <div id="products">
         {{#each starred}}
@@ -22,4 +22,5 @@
     </div>
     <script src="/scripts/staritem.js"></script>
   </body>
+  {{>about}}
 </html>
