--- a/views/starred.hbs
+++ b/views/starred.hbs
@@ -9,7 +9,7 @@
   <body>
     {{> navbar}}
 
-    <div id="content" style='margin-top: 130px'>
+    <div id="content" style='margin-top: 130px; height: 100%'>
       <h1 id="title">{{firstname}}&#39;s starred items </h1>
       <div id="products">
         {{#each starred}}
@@ -19,4 +19,5 @@
     </div>
     <script src="/scripts/staritem.js"></script>
   </body>
+  {{>about}}
 </html>
