fixed item popups

--- a/views/partials/unstarred_item_partial.hbs
+++ b/views/partials/unstarred_item_partial.hbs
@@ -1,4 +1,4 @@
-  <div class="product" data-toggle="modal" data-target="#{{itemname}}">
+  <div class="product" data-toggle="modal" data-target="#item{{id}}">
 <!--     <div class="pictureinbox">
       <img id='forsale' src="/uploads/{{picture}}" />
     </div> -->
@@ -12,7 +12,7 @@
     
   </div>
   <!-- Modal -->
-  <div class="modal fade" id="{{itemname}}" role="dialog">
+  <div class="modal fade" id="item{{id}}" role="dialog">
     <div class="modal-dialog">
     
       <!-- Modal content-->
