--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -11,6 +11,7 @@
 
     <div id='profilecontent'>
       <img id = 'profpic' src="/uploads/{{profpic}}" style='max-width: 250px; max-height: 250px'/>
+      <img id = 'beaverbubble' src="/images/beaverbubble.png" style='width: 450px; height: 350px'/>
       <div id='profilebox'>
         <h1 id='profilename'> <b>{{profilefirstname}} {{profilelastname}}</b> </h1>
         <b>Venmo:</b> {{venmo}} <br> 
@@ -33,6 +34,7 @@
         <img id = 'profpic' src="/uploads/{{profpic}}" />
       </ul> -->
       <div id="profileitems">
+      <br>
         <h1> {{profilefirstname}}&#39;s items</h1>
         <div id="products">
           {{#each starred}}
