--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -174,8 +174,10 @@ body.modal-open div.modal-backdrop {
 
 #beaverbubble{
 
-  margin-left: 80px;
+  margin-left: 500px;
   margin-top: 55px;
+  position: absolute;
+
 
 }
 #profilecontent {
@@ -187,6 +189,7 @@ body.modal-open div.modal-backdrop {
 /*  margin-left: 170px;*/
   border-bottom: solid 5px black;
   background-color: #c9c9c9;
+  position: absolute;
 
 
 }
@@ -195,18 +198,23 @@ body.modal-open div.modal-backdrop {
   margin: 30px;
   background-color: #ccc;
   width: 100%;
-  margin-top: -20px;
+  margin-top: 50px;
   margin-left: 90px;
+  position: absolute;
+
+
 /*  border: solid 5px #C2373C;*/
 
 }
 #profilebox {
   overflow: auto;
-  margin-top: -300px;
+  margin-top: 106px;
   /*background-color: red;*/
   width: 262px;
-  height: 200px;
-  margin-left: 480px;
+  height: 212px;
+  margin-left: 528px;
+  position: absolute;
+
 }
 #aboutme {
   /*background-color: red;*/
