--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -71,7 +71,7 @@ body.modal-open div.modal-backdrop {
 /* Modal Content/Box */
 .modal-content {
   overflow: auto;
-    background-color: #E5E5E5;
+    background-color: white;
     margin: 5px auto; /* 15% from the top and centered */
     border: .5px solid #47474C;
     width: 60%; /* Could be more or less, depending on screen size */
@@ -79,15 +79,16 @@ body.modal-open div.modal-backdrop {
 }
 
 .modal-header {
-  height: 20px;
+  height: 100px;
 }
 
 .modal-title{
   font-size: 20px;
-  color: #C1272D;
+  color: black;
 }
 .modal-price{
-  font: 10px;
+  font: 12px;
+  color: black;
 }
 
 .modal-body{
@@ -99,6 +100,7 @@ body.modal-open div.modal-backdrop {
 
 .modal-description{
   padding-top: 5px;
+  color: black;
 
 }
 
@@ -109,6 +111,7 @@ body.modal-open div.modal-backdrop {
 
 .post-modal{
   font-size: 10px;
+  color: black;
 }
 
 .sellingproduct{
@@ -1040,7 +1043,7 @@ body.modal-open div.modal-backdrop {
 #productcontent{
   font-size: 15px;
   color: #47474C;
-  margin-bottom:5px;
+  margin-top:10px;
   margin-left: 2px;
   width: 100px;
   float: left;
@@ -1059,7 +1062,7 @@ body.modal-open div.modal-backdrop {
   float: right;
   bottom: 20px;
   margin-right: 2px;
-  margin-top: 11px;
+  margin-top: 6px;
 /*  margin-left: 2px;*/
 }
 
