--- a/views/partials/starred_item_partial.hbs
+++ b/views/partials/starred_item_partial.hbs
@@ -4,7 +4,7 @@
     </div> -->
        <div class="col-s-6 " style="background-image:url('/uploads/{{picture}}');min-height:155px; min-width:199.5px; background-size: cover; background-position: center; "></div> 
     <div class='contentinbox'>
-      <p align="left" id="productcontent" >{{itemname}} {{user}}</p>
+      <p align="left" id="productcontent" >{{itemname}}</p>
       <p align="right" id="productcontent3">${{price}}</p>
 
 
@@ -27,9 +27,11 @@
         </div>
 
         <div class="modal-body">
+          <center>
           <div class='imageresize'>
             <img class= 'model-image' src="/uploads/{{picture}}" />
           </div>
+          </center>
           <h6 class="modal-description">{{description}}</h6>
           <div class='post-modal'
             >Posted by: <a href='/profile/{{userid}}'> {{firstname}} {{lastname}} </a><br><a href= 'mailto:{{user}}'> ({{user}})</a>
