--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -35,7 +35,7 @@
       </ul> -->
       <div id="profileitems">
       <br>
-        <h1> {{profilefirstname}}&#39;s items</h1>
+        <h1> {{profilefirstname}}&#39;s items</h1><br>
         <div id="products">
           {{#each starred}}
             {{> starred_item_partial}}
