--- a/views/home.hbs
+++ b/views/home.hbs
@@ -19,7 +19,7 @@
         <img src="/images/beaverlogo2.png" id="logohome2">
             <form id="search" method='post' action="/searchresults">
                 <input class="inputbox" id="searchboxhome" type="text"  placeholder="what are you looking for?" name="term">
-                <input class="twobuttonshome" id="go" type="submit" value="+ +" style="left: 300px;">
+                <input class="twobuttonshome" id="gohome" type="submit" value="+ +" style="left: 300px;">
             </form>
         </div>
     </div>
@@ -46,7 +46,7 @@
 
 
   </body>
-
+<div id='padding' style='width: 100%; height:50px;'></div>
 {{>about}}
 
 </html>
