--- a/views/partials/about.hbs
+++ b/views/partials/about.hbs
@@ -5,9 +5,9 @@
 {{/if}}
   <div class="container" id='aboutcontainer'>
     <h1 id = 'welcome'>
-      A site to buy, sell, trade, or just give away items - created by MIT students for MIT students!
+      A site to buy, sell, trade, or just give away items - made by MIT students for MIT students!
     </h1>
-    <h3 style='margin-top:-100px;'>Made by Reva, Rebecca, and Chris for <a href='http://6.148.scripts.mit.edu'>6.148</a> 2017</h3>
+    <h3 style='margin-top:-100px;'>Created by Reva, Rebecca, and Chris for <a href='http://6.148.scripts.mit.edu'>6.148</a> 2017</h3>
     <form action="mailto:beaverplusteam@mit.edu" method="GET">
       <input style='border: none; border-radius: 20px; background-color: #E1E1E1; padding: 8px; padding-right: 13px; padding-left: 13px; margin-top: 50px; margin-right: 15px;' type="submit" value="Contact us!" />
       {{#if onIndex}}
