--- a/views/partials/unstarred_item_partial.hbs
+++ b/views/partials/unstarred_item_partial.hbs
@@ -16,9 +16,9 @@
     <div class="modal-dialog">
     
       <!-- Modal content-->
-      <div class="modal-content">
+      <div class="modal-content" id='modal-content-product'>
         <div class="modal-header">
-          <div class='blankstar' id='blankstar{{id}}'>&#9734;</div>
+          <div class='blankstar' id='blankstar{{id}}'>&#9825;</div>
           <button type="button" class="close" data-dismiss="modal">&times;</button>
           <h4 class="modal-title">{{itemname}}</h4>
           <h5 class='modal-price'>${{price}}</h5>
