--- a/views/searchresults.hbs
+++ b/views/searchresults.hbs
@@ -10,7 +10,7 @@
     {{> navbar}}
 
     <div id="content" style='margin-top: 150px; height: 100%'>
-      <h1 id="title">Search results for "{{term}}" </h1>
+      <h1 id="title">Search results for "{{term}}" </h1> <br>
       <div id="products">
         {{#each starred}}
           {{> starred_item_partial}}
