--- a/views/starred.hbs
+++ b/views/starred.hbs
@@ -10,7 +10,7 @@
     {{> navbar}}
 
     <div id="content" style='margin-top: 130px; height: 100%'>
-      <h1 id="title">{{firstname}}&#39;s starred items </h1>
+      <h1 id="title">{{firstname}}&#39;s favorites </h1> <br>
       <div id="products">
         {{#each starred}}
           {{> starred_item_partial}}
