--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -28,6 +28,33 @@ a:hover {
   cursor: pointer;
 }
 
+#aboutcontact {
+  border: solid 1px #E1E1E1;
+  background-color: #fff;
+  border-radius: 10px; 
+  padding: 8px; 
+  padding-right: 13px; 
+  padding-left: 13px; 
+  margin-top: 50px; 
+  margin-right: 15px;
+}
+#aboutcontact:hover {
+  background-color: #E1E1E1
+}
+
+#closeabout {
+  border: solid 1px #E1E1E1;
+  background-color: #fff;
+  border-radius: 10px; 
+  padding: 8px; 
+  padding-right: 13px; 
+  padding-left: 13px; 
+  margin-top: 50px; 
+  margin-right: 15px;
+}
+#closeabout:hover {
+  background-color: #E1E1E1
+}
 .dropdown-toggle:active, .open .dropdown-toggle {background:#47474C !important; }
 
 
@@ -85,7 +112,6 @@ body.modal-open div.modal-backdrop {
 }
 
 .modal-header {
-  height: 100px;
 }
 
 .modal-title{
@@ -110,6 +136,10 @@ body.modal-open div.modal-backdrop {
 
 }
 
+#modal-content-product {
+  width: 70%;
+  height: 500px;
+}
 /*  height: 140px;
   width: 194px;*/
 
@@ -129,6 +159,7 @@ body.modal-open div.modal-backdrop {
 /* The Close Button */
 .close {
     /* Position it in the top right corner outside of the modal */
+    z-index: 2;
     position: absolute;
     right: 12px;
     top: 0; 
@@ -140,8 +171,10 @@ body.modal-open div.modal-backdrop {
 /* Close button on hover */
 .close:hover,
 .close:focus {
-    color: red;
+    opacity: 1;
+    color: #A83838;
     cursor: pointer;
+    outline: none;
 }
 
 /* Add Zoom Animation */
@@ -631,17 +664,17 @@ body.modal-open div.modal-backdrop {
 }
 .twobuttonsfog {
   border: none;
-    position: absolute;
-    width: 140px;
-    height: 23px;
-    background-color: #E5E5E5;
-    top: 180px;
-    text-align: center;
-    color: #a1282d;
-    font-size: 15.6px;
-    font-family: sans-serif;
+  position: absolute;
+  width: 140px;
+  height: 23px;
+  top: 180px;
+  background-color: #fff;
+  text-align: center;
+  color: #a1282d;
+  font-size: 15.6px;
+  font-family: sans-serif;
 /*    border-radius: 20px;*/
-    margin-left: -192px;
+  margin-left: -192px;
 
 }
 .twobuttonsfog:focus {
@@ -671,7 +704,7 @@ body.modal-open div.modal-backdrop {
     font-size: 12px;
     font-family: sans-serif;
     border-radius: 20px;
-    margin-left: -166px;
+    margin-left: -160px;
 
 }
 .twobuttonsforgot:focus {
@@ -1244,24 +1277,24 @@ body.modal-open div.modal-backdrop {
 .star {
   font-size: 30px;
   position: absolute;
-
-/*  top: 27px;
+  top: 27px;
   left: 30px;
 }
+
 .blankstar {
-  font-size: 25px;
+  font-size: 30px;
   position: absolute;
   top: 27px;
   left: 30px;
 }
-.dropdown-content {
+/*.dropdown-content {
   display: none;
   position: absolute;
   background-color: #f9f9f9;
   min-width: 100px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
-.show {display:block;}
+.show {display:block;}*/
 
 /*.dropdown{
   float: right;
