--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -24,6 +24,7 @@
         </div>
       </div>
     </div>
+    <br>
 
 <!--       <h1> {{profilefirstname}} {{profilelastname}} </h1>
       <ul style="list-style: none">
@@ -35,7 +36,7 @@
       </ul> -->
       <div id="profileitems">
       <br>
-        <h1> {{profilefirstname}}&#39;s items</h1>
+        <h1 style="margin-left: -60%"> {{profilefirstname}}&#39;s items</h1>
         <div id="products">
           {{#each starred}}
             {{> starred_item_partial}}
