update item finally jesus

--- a/views/deletesuccess.hbs
+++ b/views/deletesuccess.hbs
@@ -10,7 +10,7 @@
     {{> navbar}}
     <div id='content' style='padding-top: 175px; height: 100%;'>
       <h1>Success!</h1>
-      <p>Your item was deleted.</p>
+      <p>Your item was successfully altered.</p>
       <button class="btn btn-default" type="button" onclick="location.href='/manageitems'">return to manager</button>&#32;
       <button class="btn btn-default" type="button" onclick="location.href='/home'">return home</button>
     </div>
