--- a/views/partials/item_manager_partial.hbs
+++ b/views/partials/item_manager_partial.hbs
@@ -2,6 +2,7 @@
 
 <div class="manageritem">
   <button class='managerdeletebtn' id='deletebtn{{id}}'>&#10005;</button>
+  <button class = 'managereditbtn' id = 'edititem{{id}}'>Edit Item</button>
   <div class='manage_elt'><b>{{itemname}}</b>, </div>
   <div class='manage_elt'>ID: <b>{{id}}</b></div> <br>
 </div>
@@ -14,3 +15,31 @@
     <button type='button' class='canceldelete' id='canceldelete{{id}}'>cancel</button><br>
   </form>
 </div>
+
+
+<div class = 'hiddenconfirm' id = 'hiddenitem{{id}}' style = 'display:none'>
+
+<form method = 'post' action = '/updateitem' enctype="multipart/form-data"">
+<input type = 'text' name = 'newname' id = 'newitemname' placeholder = 'new item name'>
+<input type = 'hidden' value = {{id}} name = itemid>
+<input class="inputbox" id="additemprice" type="text" maxlength="15" placeholder="Price" name="price" >
+<textarea class="inputbox" id='description' rows="6" placeholder='Please write a description of your item here.' name='description' cols="50" ></textarea>
+<select id='category' class = id='category' name = 'category'>
+              <option value="clothes">Clothes</option>
+              <option value="book">Books</option>
+              <option value="tech">Tech</option>
+              <option value="furniture">Furniture</option>
+</select>
+
+<!--<input id="inserttag" class='addtags' type='text' placeholder='Add Tag' name='inserttag'>-->
+
+<!--<li><input class="twobuttonsaddtag" id="addtag" type="button" value="+ +" style="left: 300px;"></li>-->
+<!--<div id="tags"></div>-->
+
+<input id = 'picture' type="file" name="picture" />
+
+<li><input class="twobuttonsadditem" id="submititem{{id}}" type="submit" value="+ +" style="left: 300px;"></li>
+</form>
+</div>
+
+<!--<script src="/scripts/addtag.js"></script>-->
