--- a/views/manageitems.hbs
+++ b/views/manageitems.hbs
@@ -11,7 +11,7 @@
 
     <div id="managecontent" style='height: 100%'>
       <h1 id="title">Item Manager for {{user}}</h1>
-      <p> Delete any of your posted items.</p>
+      <p> Update or delete any of your posted items.</p>
       <div id="managercontainer">
         {{#each items}}
           {{> item_manager_partial}}
