change post name on items when user profile name changes

--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -20,7 +20,7 @@
         <input id='{{email}}' class='msgProf' type="button" value="message {{profilefirstname}}" style='background-color: #F0F0F0; border: none; display: block; margin-top: -13px; margin-bottom: 10px;'/>
         {{/if}}
         <div id='aboutme'>
-          <b>About Me:</b> <br>{{aboutme}}
+          <b>About Me:</b> <br>{{aboutme}} {{profilefirstname}}!
         </div>
       </div>
     </div>
