--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,14 +2,15 @@
   font-family: custom;
   src: url(/fonts/Raleway/Raleway-Medium.ttf);
 }
-
+input {
+  font-family: custom;
+}
 html {
     height:100%;
 } 
 
 body {
   height:100%;
-  font-family: custom;
 }
 a{
   color: #000;
@@ -88,6 +89,7 @@ body.modal-open div.modal-backdrop {
     z-index: 0; 
 }
 .modal {
+  font-family: custom !important;
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
@@ -103,12 +105,17 @@ body.modal-open div.modal-backdrop {
 
 /* Modal Content/Box */
 .modal-content {
+    font-family: custom !important;
   overflow: auto;
     background-color: white;
     margin: 5px auto; /* 15% from the top and centered */
     border: .5px solid #47474C;
     width: 60%; /* Could be more or less, depending on screen size */
     height: 400px;
+}
+
+#modal-content-signup {
+  height: 450px;
 }
 
 .modal-header {
@@ -121,6 +128,7 @@ body.modal-open div.modal-backdrop {
 .modal-price{
   font: 12px;
   color: black;
+  margin-left: -15px;
 }
 
 .modal-body{
@@ -573,7 +581,7 @@ body.modal-open div.modal-backdrop {
 #additemprice {
     float:right;
     color: #000;
-    width: 50px;
+    width: 100px;
     height: 23px;
 /*    top: 125px;*/
     border: none;
@@ -583,38 +591,13 @@ body.modal-open div.modal-backdrop {
     font-size: 15.6px;
     text-align: center;
     margin-top: 5px;
-    margin-right: 20px;
+    margin-right: 30px;
   /*    margin-left: -85px;*/
 }
 #additemprice:focus {
   outline:none;
 }
 
-
-
-
-.twobuttonsadditem {
-  border: none;
-    position: absolute;
-    width: 77px;
-    height: 23px;
-    background-color: #C1272D;
-    top: 360px;
-    text-align: center;
-    color: white;
-    font-size: 12px;
-    font-family: sans-serif;
-    border-radius: 20px;
-    margin-left: -160px;
-
-}
-.twobuttonsadditem:focus {
-  outline:none;
-
-}
-.twobuttonsadditem:hover {
-  background-color: #a1282d
-}
 
 .twobuttonslog {
   border: none;
@@ -716,28 +699,6 @@ body.modal-open div.modal-backdrop {
 }
 
 
-.twobuttonsaddtag {
-  border: none;
-    position: absolute;
-    width: 45px;
-    height: 20px;
-    background-color: #C1272D;
-    top: 260px;
-    text-align: center;
-    color: white;
-    font-size: 9px;
-    font-family: sans-serif;
-    border-radius: 20px;
-    margin-left: -10px;
-
-}
-.twobuttonsaddtag:focus {
-  outline:none;
-
-}
-.twobuttonsaddtag:hover {
-  background-color: #a1282d
-}
 
 
 #category{
@@ -1176,26 +1137,103 @@ body.modal-open div.modal-backdrop {
   border-radius: 7px;
   width:100%;
 }*/
+#newitemmodal {
+  width: 70%;
+  height: 470px;
+}
+#itemform {
+  color: #AEAEAE;
+  text-align: left;
+  padding: 16px;
+}
+#itemform input {
+  font-family: custom;
+  text-align: left;
+  border-color: #909090;
+}
+
+#itemform #description{
+  margin-left: 20px;
+  font-family: custom;
+  border: none;
+}
+#itemform #category {
+  font-family: custom;
+  float: left;
+  color: #AEAEAE;
+  width: 47%;
+}
+
+#itemform #inserttag {
+  float: left;
+  margin-left: 20px;
+}
+#itemform #uploadphoto {
+  margin-left: 15px;
+}
+#itemform #submititempic {
+  position: relative;
+  margin-top: -20px;
+  margin-left: 120px;
+}
+.twobuttonsaddtag {
+  border: none;
+  position: relative;
+  width: 45px;
+  height: 20px;
+  margin-left: -68px;
+  margin-top: 6px;
+  background-color: #C1272D;
+  text-align: center !important;
+  color: white;
+  font-size: 9px;
+  font-family: sans-serif;
+  border-radius: 20px;
+
+}
+.twobuttonsaddtag:focus {
+  outline:none;
+
+}
+.twobuttonsaddtag:hover {
+  background-color: #a1282d
+}
+
+.twobuttonsadditem {
+  border: none;
+    position: relative;
+    width: 80px;
+    height: 26px;
+    margin-left:-150px;
+    margin-top: 20px;
+    background-color: #C1272D;
+    text-align: center !important;
+    color: white;
+    font-size: 12px;
+    font-family: sans-serif;
+    border-radius: 20px;
+
+}
+.twobuttonsadditem:focus {
+  outline:none;
+
+}
+.twobuttonsadditem:hover {
+  background-color: #a1282d
+}
 
 .modal-titlelist{
-  margin-top: 20px;
-  font-size: 20px;
-  color: #C1272D;
+  margin: none;
 }
 
 #description {
     position: absolute center;
     color: #000;
-/*    width: 185px;
-    height: 23px;*/
-/*    top: 125px;*/
     border: none;
-    border-top: solid 1px #6C6C6C;
-    border-bottom: solid 1px #6C6C6C;
     background:transparent;
     font-family: sans-serif;
     font-size: 15.6px;
-    text-align: center;
+    text-align: left;
     width:100%;
     margin-top: 25px;
   /*    margin-left: -85px;*/
@@ -1261,7 +1299,7 @@ body.modal-open div.modal-backdrop {
   margin-bottom: 7px;
   margin-right: 7px;
   font-size: 12px;
-  background-color: #D3D3D3;
+  border: 1px solid #D3D3D3;
   border-radius: 15px;
   display: inline-block;
 }
@@ -1269,9 +1307,10 @@ body.modal-open div.modal-backdrop {
   display:inline-block;
 }
 .closetag{
+  color: #D3D3D3;
   display: inline-block;
   border: none;
-  background-color: #878787;
+  background-color: #fff;
   border-radius: 15px;
 }
 .star {
