Generic about me until user changes it

--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -20,7 +20,11 @@
         <input id='{{email}}' class='msgProf' type="button" value="message {{profilefirstname}}" style='background-color: #F0F0F0; border: none; display: block; margin-top: -13px; margin-bottom: 10px;'/>
         {{/if}}
         <div id='aboutme'>
+          {{#if real}}
+          <b>About Me:</b> <br>{{aboutme}}
+          {{else}}
           <b>About Me:</b> <br>{{aboutme}} {{profilefirstname}}!
+          {{/if}}
         </div>
       </div>
     </div>
