--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -17,7 +17,7 @@
         <b>Venmo:</b> {{venmo}} <br> 
         <b>Email:</b> <a href = 'mailto:{{email}}'>{{email}} </a><br><br>
         {{#if notOwnProfile}}
-        <input id='{{email}}' class='msgProf' type="button" value="message {{profilefirstname}}" style='background-color: #F0F0F0; border: none; display: block; margin-top: -13px; margin-bottom: 10px;'/>
+        <input id='{{email}}' class='msgProf' type="button" value="message {{profilefirstname}}" />
         {{/if}}
         <div id='aboutme'>
           <b>About Me:</b> <br>{{aboutme}} {{profilefirstname}}!
@@ -36,7 +36,7 @@
       </ul> -->
       <div id="profileitems">
       <br>
-        <h1 style="margin-left: -60%"> {{profilefirstname}}&#39;s items</h1>
+        <!-- <h1 style="margin-left: -60%"> {{profilefirstname}}&#39;s items</h1> -->
         <h1> {{profilefirstname}}&#39;s items</h1><br>
         <div id="products">
           {{#each starred}}
