--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -521,6 +521,26 @@ body.modal-open div.modal-backdrop {
   outline:none;
 }
 
+#password1 {
+    position: absolute center;
+    color: #000;
+    width: 185px;
+    height: 23px;
+/*    top: 125px;*/
+    border: none;
+    border-bottom: solid 1px #6C6C6C;
+    background:transparent;
+    font-family: sans-serif;
+    font-size: 15.6px;
+    text-align: center;
+
+    margin-top: 20px;
+  /*    margin-left: -85px;*/
+}
+#password1:focus {
+  outline:none;
+}
+
 #confirm_password {
     position: absolute center;
     color: #000;
@@ -538,6 +558,27 @@ body.modal-open div.modal-backdrop {
   /*    margin-left: -85px;*/
 }
 #confirm_password:focus {
+  outline:none;
+}
+
+
+#confirm_password1 {
+    position: absolute center;
+    color: #000;
+    width: 185px;
+    height: 23px;
+/*    top: 125px;*/
+    border: none;
+    border-bottom: solid 1px #6C6C6C;
+    background:transparent;
+    font-family: sans-serif;
+    font-size: 15.6px;
+    text-align: center;
+
+    margin-top: 20px;
+  /*    margin-left: -85px;*/
+}
+#confirm_password1:focus {
   outline:none;
 }
 
